recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:6: error: not enough arguments for method remove: (l: List[Int], v: Int)List[Int].
Unspecified value parameter v.
    case h::q => h::remove(q)
                          ^